Fixed responsive #wrap & started creating subnav partials

--- a/app/assets/stylesheets/docs.less
+++ b/app/assets/stylesheets/docs.less
@@ -735,7 +735,7 @@ form.well {
         padding-top: 0;
     }
     .jumbotron {
-        padding-top: 0;         // #wrap
+        padding-top: 81px;         // #wrap
     }
 
     /* Jumbotron buttons */
@@ -818,7 +818,7 @@ form.well {
 
     /* Scale down the jumbotron content */
     .jumbotron {
-        padding-top: 0px; // #wrap
+        padding-top: 81px; // #wrap
     }
     .jumbotron h1 {
         font-size: 72px;
@@ -830,7 +830,7 @@ form.well {
 @media (max-width: 980px) {
 
     .jumbotron {
-        padding-top: 0px; // #wrap
+        padding-top: 81px; // #wrap
     }
 
     /* Unfloat brand */
